--- a/lab1/public/css/style.css
+++ b/lab1/public/css/style.css
@@ -81,3 +81,113 @@ input{
 
 
 }
+
+.base-container{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: 100vh;
+}
+
+nav{
+    width: 20vw;
+    height: 100%;
+background: #000000;
+
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+}
+
+main {
+    width: 80vw;
+}
+
+nav>img {
+    width: 80%;
+    margin: 2em auto;
+}
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    line-height: 2em;
+}
+
+li i {
+    font-size: 1.5em;
+}
+
+.button {
+    border: 3px solid #D9D9D9;
+    border-radius: 1em;
+    margin-left: 2em;
+  
+    text-align: center;
+    letter-spacing: 0.72px;
+    color: #D9D9D9;
+    padding: 0.2rem;
+    width: 60%;
+}
+
+
+ul {
+    list-style-type: none;
+    font: normal normal normal 20px/27px Segoe UI;
+    letter-spacing: 0.72px;
+    color: #D9D9D9;
+    height: 100%;
+    width: calc(100% - 40px);
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+   
+}
+
+
+li {
+    text-align: left;
+    color: #D9D9D9;
+    margin-bottom: 1em;
+}
+
+li:last-child {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+
+main {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1em 2em;
+    border-bottom: 1px solid gray;
+}
+
+.go-back{
+    background: #000000;
+    border-radius: 1.5em;
+    color: #D9D9D9;
+    letter-spacing: 0.1em;
+    text-align: center;
+    width: 30%;
+}
+.logout{
+    background: #B10D0D; 
+    border-radius: 1.5em;
+    color: #D9D9D9;
+    letter-spacing: 0.1em;
+    text-align: center;
+    width: 30%;
+    margin: 0;
+    padding: 0.2 rem;
+    box-sizing: border-box;
+}
+
+
