--- a/lab1/public/views/panels.html
+++ b/lab1/public/views/panels.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
+    <link rel="stylesheet" type="text/css" href="public/css/style.css">
 
     <script src="https://kit.fontawesome.com/098b29f9ba.js" crossorigin="anonymous"></script>    <title>PANELS</title>
 </head>
@@ -8,7 +8,7 @@
 <body>
     <div class="base-container">
         <nav>
-            <img src="../img/logo.svg">
+            <img src="public/img/logo.svg">
             <ul>
                 <li>
                     <i class="fa-solid fa-plus"></i>
