--- a/lab1/public/css/style.css
+++ b/lab1/public/css/style.css
@@ -25,15 +25,15 @@ body{
 
 .login_container{
     width: 50vw;
-    height: 31vh;
+    height: 51vh;
 }
 
-form{
+form.login, form.register{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 30vh;
+    height: 50vh;
     background: #D9D9D9;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 25px;
@@ -45,7 +45,7 @@ button{
     width: 50%;
     border: none;
     color: white;
-    margin: 1em;
+    margin: 3em;
     line-height: 2.5em;
 
 }
@@ -70,11 +70,11 @@ input{
     .login-container{
         width: 85vw;
         height: 31vh;
-    } 
+    }
 
     form{
         margin: auto;
-        height: 10vh;
+        height: 20vh;
         width: 90%;
     }
 
@@ -122,7 +122,7 @@ li i {
     border: 3px solid #D9D9D9;
     border-radius: 1em;
     margin-left: 2em;
-  
+
     text-align: center;
     letter-spacing: 0.72px;
     color: #D9D9D9;
@@ -141,7 +141,7 @@ ul {
     margin: 0 auto;
     padding: 0;
     position: relative;
-   
+
 }
 
 
@@ -179,7 +179,7 @@ header {
     width: 30%;
 }
 .logout{
-    background: #B10D0D; 
+    background: #B10D0D;
     border-radius: 1.5em;
     color: #D9D9D9;
     letter-spacing: 0.1em;
@@ -189,5 +189,10 @@ header {
     padding: 0.2rem;
     box-sizing: border-box;
 }
-
+.no-valid{
+    border: 3px solid red;
+    border-radius: 1em;
+    box-shadow: 0 0 0.2em red;
+    outline: none;
+}
 
